page container component

--- a/src/components/section/Section.less
+++ b/src/components/section/Section.less
@@ -1,10 +1,11 @@
 .section {
   width: 100%;
   padding: 20px;
-  -webkit-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.4);
-  -moz-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.4);
-  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
   box-sizing: border-box;
+  margin-bottom: 20px;
 }
 .title {
   font-size: 18px;
