--- a/src/components/section/Section.less
+++ b/src/components/section/Section.less
@@ -1,11 +1,12 @@
 .section {
   width: 100%;
   padding: 20px;
-  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
   margin-bottom: 20px;
+  background: white;
 }
 .title {
   font-size: 18px;
