fee input + fixes

--- a/src/components/form/timeInput/TimeInput.less
+++ b/src/components/form/timeInput/TimeInput.less
@@ -4,7 +4,7 @@
   min-height: 30px;
   padding: 3px 6px;
   box-sizing: border-box;
-  border: 1px solid #e0e0e0;
+  border: 1px solid #c7c7c7;
   border-radius: 0;
   width: 100%;
   outline: none;
