--- a/src/components/form/section/Section.less
+++ b/src/components/form/section/Section.less
@@ -13,6 +13,6 @@
   font-weight: 600;
   color: #77828f;
   margin-bottom: 10px;
-  border-bottom: 1px solid #e0e0e0;
+  border-bottom: 1px solid #c7c7c7;
   padding-bottom: 10px;
 }
