--- a/src/features/form/Form.less
+++ b/src/features/form/Form.less
@@ -2,25 +2,25 @@
   min-height: 30px;
   padding: 3px 6px;
   box-sizing: border-box;
-  border: 1px solid #e0e0e0;
+  border: 1px solid #c7c7c7;
   border-radius: 0;
   width: 100%;
   outline: none;
   &::-webkit-input-placeholder {
     /* Chrome/Opera/Safari */
-    color: #e0e0e0;
+    color: #c7c7c7;
   }
   &::-moz-placeholder {
     /* Firefox 19+ */
-    color: #e0e0e0;
+    color: #c7c7c7;
   }
   &:-ms-input-placeholder {
     /* IE 10+ */
-    color: #e0e0e0;
+    color: #c7c7c7;
   }
   &:-moz-placeholder {
     /* Firefox 18- */
-    color: #e0e0e0;
+    color: #c7c7c7;
   }
 }
 .isInvalid {
