--- a/src/features/form/Form.less
+++ b/src/features/form/Form.less
@@ -5,6 +5,7 @@
   border: 1px solid #c7c7c7;
   border-radius: 0;
   width: 100%;
+  max-width: 400px;
   outline: none;
   &::-webkit-input-placeholder {
     /* Chrome/Opera/Safari */
