--- a/src/features/form/Form.less
+++ b/src/features/form/Form.less
@@ -28,3 +28,23 @@
   min-height: 180px;
   max-height: 180px;
 }
+.inputFee {
+  max-width: 60px;
+  margin: 0 5px 0 10px;
+}
+.inputTime {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+@media (max-width: 992px) {
+  .input {
+    max-width: 100%;
+  }
+  .inputFee {
+    max-width: 60px;
+    margin: 5px 5px 0 0;
+  }
+  .inputTime {
+    margin: 5px 0;
+  }
+}
